# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.662 2006/10/02 20:25:25 wolf31o2 Exp $

  02 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> README,
  modules/generic_stage_target.py, modules/livecd_stage1_target.py,
  modules/stage4_target.py, targets/embedded/embedded-chroot.sh,
  targets/embedded/embedded-controller.sh,
  targets/embedded/embedded-fs-runscript.sh,
  targets/embedded/embedded-preclean-chroot.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/netboot2/netboot2-copyfile.sh,
  targets/stage4/stage4-controller.sh, targets/support/kmerge.sh,
  targets/support/pre-kmerge.sh:
  Fixed lots of spacing issues, removed livecd/type from livecd-stage1, add
  splash capabilities to stage4, change 'cp -a' to 'cp -pPR', add -q to emerge
  calls in kmerge.sh, and updated README.

  13 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/livecd-bashrc, targets/support/livecdfs-update.sh:
  Fix bashrc so it doesn't give an error and add System.map to livecd-kernel.

  08 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/catalyst_support.py:
  Added fix for bug #143348.

  23 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Added -q to emerge call for systempkgs.txt just to be on the safe side.

  22 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/support/livecdfs-update.sh:
  Changed some copy commands to use -f, added a check for /etc/gconf before
  moving it when not using gentoo-release-livecd, and fixed a sed for root's
  .bashrc, as reported on the gentoo-catalyst mailing list by Luca Casagrande
  <luca.casagrande@gmail.com>.

  16 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Fixing sed so that systemspkgs.txt is built properly.
