@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.662 2006/10/02 20:25:25 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.663 2006/10/02 20:32:41 wolf31o2 Exp $
+
+  02 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  modules/generic_stage_target.py:
+  Clean up more spacing/capitalization.
 
   02 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> README,
   modules/generic_stage_target.py, modules/livecd_stage1_target.py,
